--- a/example/app/templates/base.html
+++ b/example/app/templates/base.html
@@ -5,8 +5,8 @@
     <title>{% block title %}base{% endblock %}</title>
 
 
-        <script src="/static?file=base.js"></script>
-        <script src="/static?file=api.js"></script>
+        <script src="/app/static?file=base.js"></script>
+        <script src="/app/static?file=api.js"></script>
     {% block script %}
     {% endblock %}
 </head>
