--- a/example/app/templates/index.html
+++ b/example/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block css %}
-{#    <link href="/static?file=index.css" rel="stylesheet"/>#}
+{#    <link href="/app/static?file=index.css" rel="stylesheet"/>#}
 {% endblock %}
 
 
@@ -62,9 +62,9 @@
     </div>
 
 {% block script %}
-{#    <script src="/static?file=base.js"></script>#}
-{#    <script src="/static?file=base.js"></script>#}
-{#    <script src="/static?file=api.js"></script>#}
+{#    <script src="/app/static?file=base.js"></script>#}
+{#    <script src="/app/static?file=base.js"></script>#}
+{#    <script src="/app/static?file=api.js"></script>#}
     <!--<script src="/static?file=zhihu.js"></script>-->
 {% endblock %}
 
